styles.css
:root {
    --body-font-color: #5d6063;
}

body {
    color: var(--body-font-color);
}

.main-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

@font-face {
    font-family: "business-font";
    src: 
    url('./fonts/corp-webfont.woff') format('woff'),
    url('./fonts/corp-webfont.woff2') format('woff2');
}

* {
    margin: 0;
}

.logo-and-image-container {
    width: 40%;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100vh;
    padding: 0 5rem;
    background-image: url(./img/construction-bg.png);
    background-size: cover;
    box-sizing: border-box;
}

.solid-bg img {
    height: 5rem;
}

.main-container img {
    height: 5rem;
}

.solid-bg {
    background-color: rgba(122, 122, 122, 0.35);
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    padding: 2rem 50.5%;
    box-sizing: border-box;
    margin-top: 20vh;
}

.logo-text {
    border-top: 1px solid salmon;
    border-left: 1px solid salmon;
    font-family: business-font;
    padding: 2px;
}


.text-and-form-container {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.flavor-text {
    /*font I want + fallback */
    font-family: 'Times New Roman', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    margin-top: 2vh;
    margin-bottom:clamp(0.5rem, 1rem + 2vh, 3rem);
    margin-right: 15vw;
    padding-left: 5rem;
    font-size: 1.3rem;
}

.flavor-text:first-child {
    margin-top: 10vh;
}

.flavor-text:last-child {
    margin-bottom: 5vh;
}

form {
    background-color: aliceblue;
    width: 100%;
    padding-bottom: 2.5rem;
}

#sign-up-text {
    padding-left: 5rem;
    font-weight: 700;
    margin: 1rem 2rem;
    font-size: 1.2rem;
    text-decoration: underline;
}

.main-form-wrapper {
    display: flex;
    flex-wrap: wrap;
    width: 50%;
}

.form-wrapper {
    display: flex;
    flex-direction: column;
    margin-left: 2rem;
    padding: 0 0 1.3rem 3rem;
}

/*My brain melts when i try to imagine the paddings, but just trust the process here */
input {
    padding: 0.3rem 1.5rem 0.3rem 0.2rem;
    appearance: none;
    border-radius: 3px;
}

.validity-checker {
    position: relative;
}

input:required {
    border: 1px solid black;
}

input:focus:invalid {
    border: 1px solid red;
}

input:valid {
    border: 1px solid green;
}

input:valid + .validity-checker::after {
    position: absolute;
    content: "✓";
    color: green;
    left: 5px;
}

input:invalid + .validity-checker::before {
    position: absolute;
    content: "x";
    color: red;
    left: 5px;
}

.form-wrapper:last-child {
    position: relative;
}

.pwd-validity {
    position: relative;
}

input + #pwd-invalid::after {
    position: absolute;
    content: "x";
    color: red;
    left: 5px;
}


input:valid + #pwd-valid::after {
    position: absolute;
    content: "✓";
    color: green;
    left: 5px;
}

/*causes too much problems, JS text overflows - solved with the code above - as it allows us to absolutely position our JS text without pushing content unpredictably */
#pwd-second {
    position: absolute;
    bottom: -30px;
}

button {
    appearance: none;
    background-color: #5d6063;
    color: white;
    border-radius: 9px;
    padding: 1rem 3rem;
    border: none;
    margin: 2rem 5rem 0rem;
    font-weight: 700;
}

button:hover {
    cursor: pointer;
    box-shadow: 0 1px 1px 1px gray;
}

button:active {
    cursor:progress;
    background-color: #777a7e;
}

.log-in {
    padding-left: 5rem;
    margin-top: 3rem;
}

.double-form {
    display: flex;
}


@media (max-width: 700px) {
    .double-form {
        display: block;
    }
}

@media (max-width: 1024px) {
    .logo-and-image-container {
        display: none;
    }

    .main-container {
        flex-direction: column;
    }

    .text-and-form-container {
        width: 80%;
        padding: 2rem;
    }

    .flavor-text {
        padding-left: 1rem;
        margin-right: 1rem;
        font-size: 1rem;
    }

    #sign-up-text {
        text-align: center;
        padding-left: 1rem;
        margin-top: 1rem;
    }

    button {
        margin: 1rem auto;
    }

    .log-in {
        margin: 0 auto;
        padding: 0 0 3rem 0;
    }

}

